--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<h2 id="about">Pacific Vend Distributors</h2>
 							<p>We are pacific vending</p>
 							<ul class="actions">
-								<li><a href="about_us.html" class="button">Site Under Construction</a></li>
+								<li><a href="index.html" class="button">Site Under Construction</a></li>
 							</ul>
 						</div>
 					</div>
@@ -48,7 +48,7 @@
 							<h2 id="about">Pacific Vending - Games On Location</h2>
 							<p>Bringing the fun to a place near you.</p>
 							<ul class="actions">
-								<li><a href="about_us.html" class="button">Site Under Construction</a></li>
+								<li><a href="index.html" class="button">Site Under Construction</a></li>
 							</ul>
 						</div>
 					</div>
