added contact info

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 					<div class="content">
 						<div class="inner leftMarginAlign">
 							<h2 id="about">Pacific Vend Distributors</h2>
-							<p>We are pacific vending</p>
+							<p>pacvend@gmail.com</p>
+							<p>8338 St. George St. Vancouver, BC V5X 3S7</p>
+							<p>Phone: 604-324-2164</p>
+							<p>Toll Free: 1-800-663-5953</p>
 							<ul class="actions">
 								<li><a href="index.html" class="button">Site Under Construction</a></li>
 							</ul>
@@ -46,7 +49,10 @@
 					<div class="content">
 						<div class="inner leftMarginAlign">
 							<h2 id="about">Pacific Vending - Games On Location</h2>
-							<p>Bringing the fun to a place near you.</p>
+							<p>pacvend@gmail.com</p>
+							<p>4460 -75th ave. SE, Bay 3, Calgary AB T2C 2H8</p>
+							<p>Phone: 403-990-6328</p>
+							<p>Toll Free: 1-800-663-5953</p>
 							<ul class="actions">
 								<li><a href="index.html" class="button">Site Under Construction</a></li>
 							</ul>
