--- a/Dashboard/Vancouver_Locations.html
+++ b/Dashboard/Vancouver_Locations.html
@@ -35,10 +35,9 @@
 
             <!-- Main Content -->
             <div id="content">
+              <div id="topbarContainer"></div>
+              <script src="topbar.js"></script>
 
-                <!-- Topbar -->
-                <div id="topbarContainer"></div>
-                <script src="topbar.js"></script>
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
@@ -56,8 +55,11 @@
                       <div id="locationsContainer"></div>
 
                       <script>
-                        function fetchLocations() {
-                            fetch('get_locations_BC.php')  // Replace with the actual path to your PHP script
+                      function fetchLocations(territory) {
+                          // Encode the territory for use in a URL
+                          const territoryParam = encodeURIComponent(territory);
+
+                          fetch(`get_location_territory.php?territory=Vancouver`) // Replace with the actual path to your PHP script
                                 .then(response => response.json())
                                 .then(data => {
                                     const locationsContainer = document.getElementById('locationsContainer');
@@ -123,7 +125,7 @@
                         }
 
                         // Call the function when the page loads
-                        window.onload = fetchLocations;
+                        window.onload = () => fetchLocations('Vancouver');
 
                       </script>
 
