--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -43,40 +43,34 @@
                                     </div>
                                     <form class="user" action="add_machine.php" method="post">
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="legacy_id" name="legacy_id" placeholder="Legacy_ID">
+                                            <input type="text" class="form-control form-control-user" id="name" name="name" placeholder="Game Name (Required)" required>
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="cid_number" name="cid_number" placeholder="CID_Number" required>
+                                            <input type="text" class="form-control form-control-user" id="serial_number" name="serial_number" placeholder="Serial_Number  (Required)" required>
                                         </div>
-	                                      <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="serial_number" name="serial_number" placeholder="Serial_Number" required>
-                                        </div>
-		                                    <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="name" name="name" placeholder="Name" required>
-                                        </div>
+
                                         <div class="form-group">
                                             <select class="form-control form-control-user-dropdown" id="genre" name="genre" required>
-                                                <option value="">Genre</option>
-                                                <option value="BC">Shooter</option>
-                                                <option value="AB">Redemption</option>
-                                                <option value="SK">Racing</option>
-                                                <option value="SK">Fighting</option>
+                                                <option value="">Genre (Required)</option>
+                                                <option value="Shooter">Shooter</option>
+                                                <option value="Ticket">Ticket</option>
+                                                <option value="Prize">Prize</option>
+                                                <option value="Racing">Racing</option>
+                                                <option value="Fighting">Fighting</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="description" name="description" placeholder="Description">
+                                            <input type="text" class="form-control form-control-user" id="legacy_id" name="legacy_id" placeholder="Legacy_ID">
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="dimensions" name="dimensions" placeholder="Dimensions" required>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="supplier" name="supplier" placeholder="Supplier">
+                                            <input type="text" class="form-control form-control-user" id="cid_number" name="cid_number" placeholder="CID_Number">
                                         </div>
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user" id="purchase_price" name="purchase_price" placeholder="Purchase Price">
                                         </div>
 
                                         <div class="form-group">
+                                            <b>Purchase Date:</b>
                                             <input type="date" class="form-control form-control-user" id="purchase_date" name="purchase_date" placeholder="Purchase Date">
                                         </div>
 
@@ -84,8 +78,23 @@
                                             <input type="text" class="form-control form-control-user" id="sale_price" name="sale_price" placeholder="Sale Price">
                                         </div>
                                         <div class="form-group">
+                                          <b>Sale Date:</b>
                                           <input type="date" class="form-control form-control-user" id="sale_date" name="sale_date" placeholder="Sale Date">
                                         </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control form-control-user" id="sold_to" name="sold_to" placeholder="Sold To">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <input type="text" class="form-control form-control-user" id="description" name="description" placeholder="Notes">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control form-control-user" id="dimensions" name="dimensions" placeholder="Dimensions">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control form-control-user" id="supplier" name="supplier" placeholder="Supplier">
+                                        </div>
+
 
                                         <input type="submit" class="btn btn-primary btn-user btn-block" value="Submit">
                                     </form>
