lists all fields now for machine

--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -132,6 +132,38 @@
                                                             Dimensions</div>
                                                         <div class="h5 mb-0 font-weight-bold text-gray-800">${machine.Dimensions}</div>
                                                     </div>
+                                                    <div class="col-auto1">
+                                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                            Supplier</div>
+                                                        <div class="h5 mb-0 font-weight-bold text-gray-800">${machine.Supplier}</div>
+                                                    </div>
+                                                    <div class="col-auto1">
+                                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                            PurchaseDate</div>
+                                                        <div class="h5 mb-0 font-weight-bold text-gray-800">${machine.PurchaseDate}</div>
+                                                    </div>
+
+                                                    <div class="col-auto1">
+                                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                            PurchasePrice</div>
+                                                        <div class="h5 mb-0 font-weight-bold text-gray-800">${machine.PurchasePrice}</div>
+                                                    </div>
+
+                                                    <div class="col-auto1">
+                                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                            SaleDate</div>
+                                                        <div class="h5 mb-0 font-weight-bold text-gray-800">${machine.SaleDate}</div>
+                                                    </div>
+                                                    <div class="col-auto1">
+                                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                            SalePrice</div>
+                                                        <div class="h5 mb-0 font-weight-bold text-gray-800">${machine.SalePrice}</div>
+                                                    </div>
+                                                    <div class="col-auto1">
+                                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                                            Sold To</div>
+                                                        <div class="h5 mb-0 font-weight-bold text-gray-800">${machine.SoldTo}</div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         `;
