--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -167,6 +167,18 @@
                                                 </div>
                                             </div>
                                         `;
+                                        <div class="dropdown no-arrow mb-4">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button"
+                                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">
+                                                Dropdown (no arrow)
+                                            </button>
+                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                                <a class="dropdown-item" href="#">Action</a>
+                                                <a class="dropdown-item" href="#">Another action</a>
+                                                <a class="dropdown-item" href="#">Something else here</a>
+                                            </div>
+                                        </div>
                                         // Add Edit button to each machine
                                         const editButton = document.createElement('button');
                                         editButton.textContent = 'Edit';
