--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -166,28 +166,21 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="dropdown no-arrow mb-4">
-                                                <button class="btn btn-secondary dropdown-toggle" type="button"
-                                                    id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-                                                    aria-expanded="false">
-                                                    Dropdown (no arrow)
-                                                </button>
-                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                                    <a class="dropdown-item" href="#">Action</a>
-                                                    <a class="dropdown-item" href="#">Another action</a>
-                                                    <a class="dropdown-item" href="#">Something else here</a>
+                                            <div class="dropdown no-arrow">
+                                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                                </a>
+                                                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                                    aria-labelledby="dropdownMenuLink">
+                                                    <div class="dropdown-header">Edit or Remove:</div>
+                                                    <a class="dropdown-item" href="#">Edit</a>
+                                                    <a class="dropdown-item" href="#">Set/Change Location</a>
+                                                    <div class="dropdown-divider"></div>
+                                                    <a class="dropdown-item" href="#">Create Maintenance Report</a>
                                                 </div>
                                             </div>
                                         `;
-
-                                        // Add Edit button to each machine
-                                        const editButton = document.createElement('button');
-                                        editButton.textContent = 'Edit';
-                                        editButton.className = 'btn btn-warning btn-edit';
-                                        editButton.onclick = function() { openEditModal(machine); };
-                                        machineDiv.appendChild(editButton);
-
-                                        machinesContainer.appendChild(machineDiv);
                                     });
                                 })
                                 .catch(error => {
