--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -174,7 +174,7 @@
                                                 <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
                                                      aria-labelledby="dropdownMenuLink">
                                                     <div class="dropdown-header">Edit or Remove:</div>
-                                                    <a class="dropdown-item" href="#">Edit</a>
+                                                    <a class="dropdown-item" href="#" onclick="openEditModal('machine')">Edit</a>
                                                     <a class="dropdown-item" href="#">Set/Change Location</a>
                                                     <div class="dropdown-divider"></div>
                                                     <a class="dropdown-item" href="#">Create Maintenance Report</a>
@@ -184,7 +184,7 @@
                                         `;
 
                                         // old way of adding an edit button
-                                        const editButton = document.createElement('dropdown no-arrow');
+                                        const editButton = document.createElement('button');
                                         editButton.textContent = 'Edit';
                                         editButton.className = 'btn btn-warning btn-edit';
                                         editButton.onclick = function() { openEditModal(machine); };
