--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -166,23 +166,21 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="dropdown no-arrow">
-                                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                                </a>
-                                                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                                     aria-labelledby="dropdownMenuLink">
-                                                    <div class="dropdown-header">Edit or Remove:</div>
-                                                    <a class="dropdown-item" href="#" onclick="openEditModal('machine')">Edit</a>
-                                                    <a class="dropdown-item" href="#">Set/Change Location</a>
-                                                    <div class="dropdown-divider"></div>
-                                                    <a class="dropdown-item" href="#">Create Maintenance Report</a>
-                                                </div>
+                                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                                                <div class="dropdown-header">Edit or Remove:</div>
+                                                <a class="dropdown-item" href="#" data-machine-id="${machine.MachineID}" onclick="editMachineClicked(this)">Edit</a>
+                                                a class="dropdown-item" href="#" onclick="openEditModal('machine')">Edit</a>
+                                                <a class="dropdown-item" href="#">Set/Change Location</a>
+                                                <div class="dropdown-divider"></div>
+                                                <a class="dropdown-item" href="#">Create Maintenance Report</a>
                                             </div>
-
                                         `;
-
+                                        function editMachineClicked(element) {
+                                            const machineId = element.getAttribute('data-machine-id');
+                                            // Find the machine object by ID or fetch it from the server
+                                            const machine = /* your logic to find the machine object by ID */;
+                                            openEditModal(machine);
+                                        }
                                         // old way of adding an edit button
                                         const editButton = document.createElement('button');
                                         editButton.textContent = 'Edit';
