--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -168,15 +168,18 @@
                                             </div>
                                             <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
                                                 <div class="dropdown-header">Edit or Remove:</div>
-                                                <a class="dropdown-item" href="#" data-machine-id="${machine.MachineID}" onclick="editMachineClicked(this)">Edit</a>
+                                                <a class="dropdown-item" href="#" data-machine-id="${machine}" onclick="editMachineClicked(this)">Edit</a>
                                                 a class="dropdown-item" href="#" onclick="openEditModal('machine')">Edit</a>
                                                 <a class="dropdown-item" href="#">Set/Change Location</a>
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">Create Maintenance Report</a>
                                             </div>
                                         `;
-                                        const machineId = element.getAttribute('data-machine-id');
-                                        machineID.onclick = function() { openEditModal(machine); };
+                                        function editMachineClicked(element) {
+                                            const machineId = element.getAttribute('data-machine-id');
+                                            openEditModal(machineId);
+                                        }
+
                                         // old way of adding an edit button
                                         const editButton = document.createElement('button');
                                         editButton.textContent = 'Edit';
