--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -182,20 +182,6 @@
                                             </div>
 
                                         `;
-                                        function editMachineClicked(element) {
-                                            const machineId = element.getAttribute('data-machine-id');
-                                            if(machineID){
-                                              openEditModal(machine);
-                                            }
-
-                                        }
-
-                                        // old way of adding an edit vb
-                                        const editButton = document.createElement('button');
-                                        editButton.textContent = 'Edit';
-                                        editButton.className = 'btn btn-warning btn-edit';
-                                        editButton.onclick = function() { openEditModal(machine); };
-                                      //  machineDiv.appendChild(editButton);
 
                                         machinesContainer.appendChild(machineDiv);
                                     });
@@ -203,8 +189,33 @@
                                 .catch(error => {
                                     console.error('Error fetching machines:', error);
                                 });
+                                // Bind click event to edit buttons after they are added to the DOM
+                                data.forEach(machine => {
+                                    const editButton = document.querySelector(`[data-machine-id="${machine.MachineID}"]`);
+                                    if (editButton) {
+                                        editButton.addEventListener('click', function(event) {
+                                            event.preventDefault();
+                                            const machineId = this.getAttribute('data-machine-id');
+                                            const selectedMachine = data.find(m => m.MachineID === machineId);
+                                            if (selectedMachine) {
+                                                openEditModal(selectedMachine);
+                                            }
+                                        });
+                                    }
+                                });
+                            })
+                            .catch(error => {
+                                console.error('Error fetching machines:', error);
+                            });
                         }
 
+                        function editMachineClicked(element, machinesData) {
+                          const machineId = element.getAttribute('data-machine-id');
+                          const machine = machinesData.find(m => m.MachineID === machineId);
+                          if (machine) {
+                              openEditModal(machine);
+                          }
+                        }
                         // Call the function when the page loads
                         window.onload = () => fetchmachines('Edmonton');
 
