--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -76,20 +76,17 @@
                         $('#editmachineModal').modal('show');
                       }
 
-                      function fetchmachines(filter) {
 
-                          fetch(`get_machines.php`) // Replace with the actual path to your PHP script
-                                .then(response => response.json())
-                                .then(data => {
-                                    const machinesContainer = document.getElementById('machinesContainer');
-                                    data.forEach(machine => {
-                                        // Check if 'type' is defined, if not, use a default value like 'unknown'
-                                        const machineGenre = machine.Genre ? machine.Genre.toLowerCase() : 'unknown';
 
-                                        const machineDiv = document.createElement('div');
-                                        machineDiv.className = `card border-left-${machineGenre} shadow py-2`;
+                        function fetchmachines(filter) {
+                                fetch(`get_machines.php`) // Replace with the actual path to your PHP script
+                                    .then(response => response.json())
+                                    .then(data => {
+                                        const machinesContainer = document.getElementById('machinesContainer');
+                                        data.forEach(machine => {
+                                            // ... existing code to create machineDiv ...
 
-                                        machineDiv.innerHTML = `
+                                            machineDiv.innerHTML = `
                                             <div class="card-body">
                                                 <div class="row no-gutters align-items-center">
                                                     <div class="col-auto1 mr-2">
@@ -180,45 +177,41 @@
                                                     <a class="dropdown-item" href="#">Create Maintenance Report</a>
                                                 </div>
                                             </div>
+                                            `;
 
-                                        `;
+                                            machinesContainer.appendChild(machineDiv);
+                                        });
 
-                                        machinesContainer.appendChild(machineDiv);
-                                    });
-                                })
-                                .catch(error => {
-                                    console.error('Error fetching machines:', error);
-                                });
-                                // Bind click event to edit buttons after they are added to the DOM
-                                data.forEach(machine => {
-                                    const editButton = document.querySelector(`[data-machine-id="${machine.MachineID}"]`);
-                                    if (editButton) {
-                                        editButton.addEventListener('click', function(event) {
-                                            event.preventDefault();
-                                            const machineId = this.getAttribute('data-machine-id');
-                                            const selectedMachine = data.find(m => m.MachineID === machineId);
-                                            if (selectedMachine) {
-                                                openEditModal(selectedMachine);
+                                        // Bind click event to edit buttons after they are added to the DOM
+                                        data.forEach(machine => {
+                                            const editButton = document.querySelector(`[data-machine-id="${machine.MachineID}"]`);
+                                            if (editButton) {
+                                                editButton.addEventListener('click', function(event) {
+                                                    event.preventDefault();
+                                                    const machineId = this.getAttribute('data-machine-id');
+                                                    const selectedMachine = data.find(m => m.MachineID === machineId);
+                                                    if (selectedMachine) {
+                                                        openEditModal(selectedMachine);
+                                                    }
+                                                });
                                             }
                                         });
-                                    }
-                                });
-                            })
-                            .catch(error => {
-                                console.error('Error fetching machines:', error);
-                            });
-                        }
+                                    })
+                                    .catch(error => {
+                                        console.error('Error fetching machines:', error);
+                                    });
+                            }
 
-                        function editMachineClicked(element, machinesData) {
-                          const machineId = element.getAttribute('data-machine-id');
-                          const machine = machinesData.find(m => m.MachineID === machineId);
-                          if (machine) {
-                              openEditModal(machine);
-                          }
-                        }
-                        // Call the function when the page loads
-                        window.onload = () => fetchmachines('Edmonton');
+                            function editMachineClicked(element, machinesData) {
+                                const machineId = element.getAttribute('data-machine-id');
+                                const machine = machinesData.find(m => m.MachineID === machineId);
+                                if (machine) {
+                                    openEditModal(machine);
+                                }
+                            }
 
+                            // Call the function when the page loads
+                            window.onload = () => fetchmachines('Edmonton');
                       </script>
 
                     </div>
@@ -287,7 +280,7 @@
     <script src="js/demo/chart-pie-demo.js"></script>
     <script>
       window.onload = function() {
-      fetchmachines();
+      fetchmachines('Edmonton');
       fetch('edit-modal.html')
         .then(response => response.text())
         .then(html => {
