--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -85,6 +85,11 @@
                                         const machinesContainer = document.getElementById('machinesContainer');
                                         data.forEach(machine => {
                                             // ... existing code to create machineDiv ...
+                                            // Check if 'type' is defined, if not, use a default value like 'unknown'
+                                            const machineGenre = machine.Genre ? machine.Genre.toLowerCase() : 'unknown';
+
+                                            const machineDiv = document.createElement('div');
+                                            machineDiv.className = `card border-left-${machineGenre} shadow py-2`;
 
                                             machineDiv.innerHTML = `
                                             <div class="card-body">
