--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -178,7 +178,7 @@
                                                 <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
                                                      aria-labelledby="dropdownMenuLink">
                                                     <div class="dropdown-header">Edit or Remove:</div>
-                                                    <a class="dropdown-item" href="#" data-machine-id="${machine}">Edit</a>
+                                                    <a class="dropdown-item" href="#" data-machine-id="${machine.MachineID}">Edit</a>
                                                     <a class="dropdown-item" href="#">Set/Change Location</a>
                                                     <div class="dropdown-divider"></div>
                                                     <a class="dropdown-item" href="#">Create Maintenance Report</a>
