changed approach to open edit modal

--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -63,18 +63,10 @@
                         document.getElementById('originalAddress').value = machine.Address;
                         document.getElementById('editInputName').value = machine.CIDNumber;
                         document.getElementById('editInputAddress').value = machine.SerialNumber;
-
-                        document.getElementById('editInputCity').value = machine.Name;
-                        document.getElementById('editInputZip').value = machine.Genre;
-                        document.getElementById('editExampleProvince').value = machine.Name;
-                        document.getElementById('editExampleTerritory').value = machine.Name;
-                        document.getElementById('editExampleType').value = machine.Name;
-                        document.getElementById('editInputEmail').value = machine.Name;
-                        document.getElementById('editInputPhoneNumber').value = machine.Name;
                         // ... set values for all fields ...
                         console.log("almost done")
                         // Show the modal
-                        $('#editmachineModal').modal('show');
+                        $('#editLocationModal').modal('show');
                         console.log("showing modal")
                       }
 
